# DicomPreview

./: .gitignore  .pre-commit-config.yaml  .swiftlint.yml  CONTRIBUTING.md  ExportOptions.plist  LICENSE  README.md  build_rust_library.sh
.github/workflows/: build.yml
DicomPreview/: ContentView.swift  DicomPreviewApp.swift
DicomPreview.xcodeproj/: project.pbxproj
DicomPreviewExtension/: DicomParser.swift  HTMLGenerator.swift  Info.plist  PreviewProvider.swift  ResourceLoader.swift
DicomPreviewExtension/Base.lproj/: PreviewViewController.xib
DicomPreviewExtension/Resources/: scripts.js  styles.css
DicomPreviewExtension/include/: dicom_parser.h
dicom-parser/: .clippy.toml  Cargo.toml
dicom-parser/.cargo/: config.toml
dicom-parser/src/: lib.rs
